# texpacker

./: CMakeLists.txt  LICENSE
cmake/: base_template.cmake  download_template.cmake  win32_template.cmake
cmake/dependencies/: CMakeLists.txt
cmake/dependencies/jansson/: CMakeLists.txt
cmake/depends_win32/: CMakeLists.txt
cmake/downloads/: CMakeLists.txt
cmake/solution_win32/: CMakeLists.txt
src/: texpacker.c
