CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

OPTION(TEXPACKER_DEPENDENCE_JANSSON "jansson" ON)

MESSAGE("TEXPACKER_DEPENDENCE_JANSSON: ${TEXPACKER_DEPENDENCE_JANSSON}")

PROJECT(dependencies)

message("============@@##START##@@============")

#dependencies jansson
if(TEXPACKER_DEPENDENCE_JANSSON)
    message("================jansson================")
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/jansson/CMakeLists.txt ${TEXPACKER_THIRDPARTY_DIR}/jansson/CMakeLists.txt COPYONLY)
   
    set(USE_URANDOM OFF CACHE BOOL "USE_URANDOM" FORCE)
    set(USE_WINDOWS_CRYPTOAPI OFF CACHE BOOL "USE_URANDOM" FORCE)
    set(JANSSON_STATIC_CRT ON CACHE BOOL "JANSSON_STATIC_CRT" FORCE)
    set(JANSSON_EXAMPLES OFF CACHE BOOL "USE_URANDOM" FORCE)
    set(JANSSON_BUILD_DOCS OFF CACHE BOOL "JANSSON_BUILD_DOCS" FORCE)
    set(JANSSON_WITHOUT_TESTS ON CACHE BOOL "JANSSON_WITHOUT_TESTS" FORCE)
    set(JANSSON_INSTALL ON CACHE BOOL "JANSSON_INSTALL" FORCE)

    ADD_SUBDIRECTORY(${TEXPACKER_THIRDPARTY_DIR}/jansson ${CMAKE_TEMP_DIR}/jansson)
    
    set(JANSSON_INCLUDE_DIRS "${TEXPACKER_THIRDPARTY_CONFIG_DIR}/jansson/include" CACHE INTERNAL "JANSSON_INCLUDE_DIRS" FORCE)
    
    message("JANSSON_INCLUDE_DIRS: ${JANSSON_INCLUDE_DIRS}")
endif()

message("============@@##COMPLETE##@@============")